# ocaml_aoc_2023

./: .gitignore  README.md  dune-project  ocaml_aoc_2023.opam
lib/: almanac.ml  almanac_convert.ml  aoc.ml  card.ml  cube.ml  cube.mli  dune  item_2d.ml  parser.ml  schematic.ml  sparse_list.ml  sparse_map.ml
